add css to inputs and buttons

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,19 +4,21 @@
     </div>
     <ion-list class="login-list">
         <ion-item class="login-item">
+            <ion-label class="label-item" color="dark" fixed>Email</ion-label>
             <ion-label class="item-right">
                 <ion-icon ios="ios-mail-outline" md="md-mail"></ion-icon>
             </ion-label>
-            <ion-input type="text" placeholder="Email"></ion-input>
+            <ion-input type="text"></ion-input>
         </ion-item>
         <ion-item class="login-item">
+            <ion-label class="label-item" color="dark" fixed>Contraseña</ion-label>
             <ion-label class="item-right">
-                <ion-icon ios="ios-lock-outline" md="ios-lock"></ion-icon>
+                <ion-icon class="icon-lock" ios="ios-lock-outline" md="ios-lock"></ion-icon>
             </ion-label>
-            <ion-input type="text" placeholder="Contraseña"></ion-input>
+            <ion-input type="password"></ion-input>
         </ion-item>
         <button ion-button class="btn btn-login" full>Ingresar</button>
         <p style="text-align: center;">ó</p>
-        <button ion-button class="btn" full>Inicia sesión con facebook</button>
+        <button ion-button class="btn btn-fb" full>Inicia sesión con facebook</button>
     </ion-list>
 </ion-content>
