fix assets images

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content padding>
     <div class="section-logo">
-        <img class="logo-app" src="/assets/imgs/logo.svg" />
+        <img class="logo-app" src="assets/imgs/logo.svg" />
     </div>
     <ion-list class="input-fields">
         <ion-item class="input-field">
