--- a/src/pages/register-user/register-user.html
+++ b/src/pages/register-user/register-user.html
@@ -4,7 +4,7 @@
 </ion-header>
 <ion-content padding>
 	<div class="section-logo">
-		<img class="logo-app" src="/assets/imgs/logo.svg" />
+		<img class="logo-app" src="assets/imgs/logo.svg" />
 		<header>CREAR UNA NUEVA CUENTA</header>
 	</div>
     <form novalidate [formGroup]="user">
