add google maps component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,4 +17,7 @@
             </ion-select>
         </ion-item>
     </ion-list>
+    <div class="map-section" padding>
+        <map></map>
+    </div>
 </ion-content>
