--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content padding>
     <div class="section-logo">
-        <img class="logo-app" src="assets/imgs/logo.svg" />
+        <img class="logo-app" src="assets/imgs/logo.png" />
     </div>
     <ion-list class="input-fields">
         <ion-item class="input-field">
@@ -20,7 +20,7 @@
         <button ion-button class="btn btn-fb" full (click)='fbLogin()'>Inicia sesión con facebook</button>
         <div class="register-link">
             <span>¿No tienes una cuenta?</span>
-            <button ion-button clear color="primary" (click)='goRegister()'>Regístrate</button>
+            <button ion-button clear color="light" (click)='goRegister()'>Regístrate</button>
         </div>
     </ion-list>
 </ion-content>
