add module reset password

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,5 +22,8 @@
             <span>¿No tienes una cuenta?</span>
             <button ion-button clear color="light" (click)='goRegister()'>Regístrate</button>
         </div>
+        <div class="register-link">
+            <button ion-button clear color="light" (click)='goForgotPassword()'>¿Olvidaste tu contraseña?</button>
+        </div>
     </ion-list>
 </ion-content>
