--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -17,7 +17,10 @@
         <button ion-button class='btn btn-primary' full [disabled]='!email' (click)='resetPassword()'>Enviar</button>
     </ion-list>
     <div class="validate-code-section" *ngIf='isSent'>
-        <h3>Ingrese el código que le hemos enviado a su correo</h3>
+        <div class="sub-title">
+        <div class="sub-title">
+            Ingrese el código que le hemos enviado a su correo
+        </div>
         <form novalidate [formGroup]="user">
             <ion-list class='input-fields'>
                 <ion-item class='input-field label-left'>
