create fb-button component and add to register page

--- a/src/pages/register-user/register-user.html
+++ b/src/pages/register-user/register-user.html
@@ -38,7 +38,7 @@
             </ion-item>
             <button ion-button class="btn btn-primary" full [disabled]="user.invalid || unmatchPassword(user)" (click)="register(user)">Registrar</button>
             <p style="text-align: center;">ó</p>
-            <button ion-button class="btn btn-fb" full>Inicia sesión con facebook</button>
+            <fb-button></fb-button>
         </ion-list>
     </form>
 </ion-content>
