enabled menu and add logout logic

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <button class="menu" ion-button menuToggle disabled>
+        <button class="menu" ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>Búsqueda</ion-title>
