--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,10 +9,7 @@
 <ion-content>
     <ion-list class="search-section">
         <ion-item class="input-search">
-            <ion-label class="label-search">
-                <ion-icon class="icon" ios="ios-search" md="md-search"></ion-icon>
-            </ion-label>
-            <ion-select class="select-search" [(ngModel)]="bank" placeholder="Buscar bancos" (ionChange)="changeBank()" >
+            <ion-select class="select-search" [(ngModel)]="bank" placeholder="Seleccione un banco" (ionChange)="changeBank()" >
                 <ion-option *ngFor="let bank of (banks | async)" [value]="bank.id">{{bank.short_name}}</ion-option>
             </ion-select>
         </ion-item>
