--- a/src/pages/result/result.html
+++ b/src/pages/result/result.html
@@ -16,7 +16,7 @@
             <ion-label class="label-search">
                 <ion-icon class="icon" ios="ios-search" md="md-search"></ion-icon>
             </ion-label>
-            <ion-select class="select-search" [(ngModel)]="bankId" placeholder="Buscar bancos" (ionChange)="changeBank()" >
+            <ion-select class="select-search no-icon" [(ngModel)]="bankId" placeholder="Buscar bancos" (ionChange)="changeBank()" >
                 <ion-option *ngFor="let bank of (banks | async)" [value]="bank.id">{{bank.short_name}}</ion-option>
             </ion-select>
         </ion-item>
