--- a/src/pages/register-user/register-user.html
+++ b/src/pages/register-user/register-user.html
@@ -24,13 +24,19 @@
                 </ion-label>
                 <ion-input type="password" formControlName="password" placeholder="Contraseña"></ion-input>
             </ion-item>
+            <div class="error" *ngIf="user.get('password').hasError('minlength') && user.get('password').touched">
+                Ingrese como mínimo 8 caracteres.
+            </div>
             <ion-item class="input-field label-left">
                 <ion-label class="label">
                     <ion-icon class="icon icon-lock" ios="ios-lock" md="md-lock"></ion-icon>
                 </ion-label>
                 <ion-input type="password" formControlName="repeatPassword" placeholder="Repetir contraseña"></ion-input>
             </ion-item>
-            <div class="error" *ngIf="unmatchPassword(user) && user.get('repeatPassword').touched">
+            <div class="error" *ngIf="user.get('repeatPassword').hasError('minlength') && user.get('repeatPassword').touched">
+                Ingrese como mínimo 8 caracteres.
+            </div>
+            <div class="error" *ngIf="!user.get('repeatPassword').hasError('minlength') && unmatchPassword(user) && user.get('repeatPassword').touched">
                 Las contraseñas no coinciden.
             </div>
             <ion-item class="input-field label-left">
