--- a/src/pages/result/result.html
+++ b/src/pages/result/result.html
@@ -16,13 +16,13 @@
             <ion-label class="label-search">
                 <ion-icon class="icon" ios="ios-search" md="md-search"></ion-icon>
             </ion-label>
-            <ion-select class="select-search no-icon" [(ngModel)]="bankId" placeholder="Buscar bancos" (ionChange)="changeBank()" >
+            <ion-select class="select-search no-icon" [(ngModel)]="bankId" placeholder="Buscar bancos" (ionChange)="changeBank()" [disabled]="disabledSearch" >
                 <ion-option *ngFor="let bank of (banks | async)" [value]="bank.id">{{bank.short_name}}</ion-option>
             </ion-select>
         </ion-item>
     </ion-list>
     <div class="section-map" *ngSwitchCase="true">
-        <map [results]="bankDetails"></map>
+        <map [results]="bankDetails" [observeLocation]="locationSubject"></map>
     </div>
     <div class="section-list" *ngSwitchCase="false">
         <ion-list class="list">
