--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,6 @@
     </ion-list>
     <map
         [animation]="true"
-        (onChangeUserPosition)="onChangeUserPosition($event)"
-        [observeLocation]="locationSubject">
+        (onChangeUserPosition)="onChangeUserPosition($event)">
     </map>
 </ion-content>
