--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,8 +14,7 @@
             </ion-select>
         </ion-item>
     </ion-list>
-    <map
-        [animation]="true"
+    <map [animation]="true"
         (onChangeUserPosition)="onChangeUserPosition($event)">
     </map>
 </ion-content>
